--- a/index.ipynb
+++ b/index.ipynb
@@ -122,8 +122,8 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks \n",
-    "# 5"
+    "number_of_weeks # 5\n",
+    "number_of_weeks="
    ]
   },
   {
